# STB3-F1Tenth

./: .gitignore  CLAUDE.md  Dockerfile  README.md  README_SAC_CNN.md  architecture_comparison.md  convert_model_for_inference.py  evaluating.py  test_integration.py  training.py  training_sac_cnn.py
SAC_Design(isaaclab용 이므로 참고만)/f1tenth/: __init__.py  f1tenth_env.py  test_f1tenth.py
SAC_Design(isaaclab용 이므로 참고만)/f1tenth/agents/: __init__.py  skrl_sac_cfg.yaml
SAC_Design(isaaclab용 이므로 참고만)/f1tenth/models/: __init__.py  cnn_mlp_policy.py
SAC_Design(isaaclab용 이므로 참고만)/skrl/: play.py  train.py
Test_F1Tenth/f1tenth/launch/: f1tenth_checkpoint_system_launch.py
Test_F1Tenth/f1tenth_control/: setup.py
Test_F1Tenth/f1tenth_control/f1tenth_control/: sac_cnn_controller.py
Test_F1Tenth/f1tenth_control/launch/: sac_cnn_launch.py
code/: cnn_policy.py  eoin_callbacks.py  improved_rewards.py  wrappers.py
f1tenthRL_ws/src/: sac_control.rviz
f1tenthRL_ws/src/f1tenth/launch/: f1tenth_checkpoint_system_launch.py
f1tenthRL_ws/src/f1tenth_control/: package.xml  setup.py
f1tenthRL_ws/src/f1tenth_control/f1tenth_control/: sac_cnn_controller.py
f1tenthRL_ws/src/f1tenth_control/launch/: sac_cnn_launch.py
f1tenthRL_ws/src/f1tenth_control/rviz/: sac_control.rviz
f1tenthRL_ws/src/f1tenth_gym_ros/config/: sim.yaml
f1tenthRL_ws/src/f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge.py
f1tenthRL_ws/src/f1tenth_gym_ros/launch/: gym_bridge_launch.py
f1tenth_racetracks/Underground/: underground.yaml  underground_centerline.csv
scripts/: docker.sh  generate_centerline.py
